# DAB2

./: .gitignore  README.md  creatingByJasper.sql
Importing/: CMakeLists.txt  CorrectJson.cpp  CorrectJson.h  getImage.cpp  getImage.h  htmlRequest.cpp  htmlRequest.h  main.cpp  requestTest.http
Importing/Circuit/: CircuitInfo.cpp  CircuitInfo.h
Importing/Driver info/: driverinfo.cpp  driverinfo.h
Importing/countries/: GetCountries.cpp  GetCountries.h
Importing/database/: SaveToDB.cpp  SaveToDB.h
Importing/results/: Results.cpp  Results.h
php/: .gitignore  circuit.html  driver.html  main.html  race.html  season.html
php/design/: circuit.css  driver.css  main.css  race.css  season.css
php/php/: race.php
webpage/: AlterTable.html  addResult.html  circuit.html  circuitOverview.php  driver.html  driverOverview.js  driverOverview.php  login.html  main.html  mrFresh.html  race.html  season.html  seasonOverview.js  seasonOverview.php
webpage/design/: AlterTable.css  circuit.css  circuitOverview.css  driver.css  driverOverview.css  login.css  main.css  mrFresh.css  race.css  season.css  seasonOverview.css
webpage/php/: addRace.php  auditLog.php  circuit.php  convertNationality.php  deleteRace.php  driver.php  driverOverview.php  formHandler.php  getArr.php  getTimeline.php  login.php  main.php  portrait.php  race.php  season.php  utf8ize.php
